[tool.poetry]
name = "luna-nlg"
version = "1.0.0"
description = "Source code for the LUNA project"
authors = [
    "Moonlight Syntax <moonlight.syntax@gmail.com>"
]
license = "MIT"
readme = "README.md"
packages = [
	{ include = "luna" }
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
torch = "1.12.1"
numpy = "1.24.1"
joblib = "1.3.2"
gdown = "4.7.1"
transformers = "4.28.1"
gin-config = "0.5.0"
spacy = "3.5.2"
scikit-learn = "1.2.2"
geomloss = "0.2.6"
six = "1.16.0"
blanc = "0.3.0"
evaluate = "0.4.0"
sacrebleu = "2.3.1"
scipy = "1.10.1"
pyemd = "1.0.0"
bert-score = "0.3.13"
absl-py = "1.4.0"
rouge-score = "0.1.2"
POT = "0.9.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "3.3.1"
autoflake = "2.1.1"
pytest = "7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
color = true
line-length = 120
target-version = ["py39"]
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | env
    | venv
)/
'''



[tool.isort]
py_version = 38
line_length = 120
sections = ["FUTURE", "TYPING", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
profile = "black"
include_trailing_comma = true
indent = 4
color_output = true
